--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+
+<head >2024-2025 第一学期</head>
+人工智能导论
+
