--- a/_pages/people.html
+++ b/_pages/people.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "people"
+title: "People"
 permalink: /people/
 author_profile: true
 ---
@@ -8,7 +8,12 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+研究生
+
+本科生
+
+
+毕业的学生
+
+
 
