--- a/_pages/people.html
+++ b/_pages/people.html
@@ -6,18 +6,30 @@ author_profile: true
 ---
 
 {% include base_path %}
-
 <h1>
-研究生
-</h1>
+  博士后
+  </h1>
+  Haseeb Hassan <br>
+  苏李一磊 <br>
+  Rashid Khan  <br>
+  
+<h1>
+研究生</h1>
+2022级： 陈超， 吴嘉怡 <br>
+2023级： 郑浩然，龚政，肖力伟 <br>
+2024级： <br>
 
 <h1>
 本科生
 </h1>
 
 <h1>
-毕业的学生
-</h1>
+毕业的学生</h1>
+2021级研究生： 潘元科，李昊玉，戴佳鹏，朱金鑫，张瀚文，左旭民  <br>
+2020级研究生： 黄永志，肖楚达，闫岩，阮茹芸  <br>
+2019级研究生： 李丹，任昭宇   <br>
+联合培养博士生：周成民  <br>
+
 
 
 
