--- a/_pages/people.html
+++ b/_pages/people.html
@@ -10,9 +10,9 @@ author_profile: true
 <h1>
   博士后
 </h1>
-  Haseeb Hassan <br>
-  苏李一磊 <br>
   Rashid Khan  <br>
+  苏李一磊 （已出站） <br>
+  Haseeb Hassan （已出站）<br>
 <br>
 <br>
 <h1>
