--- a/_pages/people.html
+++ b/_pages/people.html
@@ -23,9 +23,7 @@ author_profile: true
 
 <br>
 <br>
-<h1>
-本科生
-</h1>
+
 <br><br>
 <h1>
 毕业的学生</h1>
@@ -33,6 +31,7 @@ author_profile: true
 2020级研究生： 黄永志，肖楚达，闫岩，阮茹芸  <br>
 2019级研究生： 李丹，任昭宇   <br>
 联合培养博士生：周成民  <br>
+本科生：
 <br>
 
 
