--- a/_pages/introduction.html
+++ b/_pages/introduction.html
@@ -13,7 +13,7 @@ author_profile: true
 {% endfor %}
 欢迎来到深圳技术大学-大数据与互联网学院-医学人工智能实验室！
 <br>
-# 研究领域
-======
+<h1> 研究领域</h1>
+<br>
 
-人工智能、深度学习、医疗影像学、大数据技术与应用、生物信息学、精准医学、手术机器人、AI制药等
+大模型微调技术，医学大模型，人工智能、深度学习、医疗影像学、大数据技术与应用、生物信息学、精准医学、手术机器人、AI制药等
