update people and add more publicatiions

--- a/_pages/people.html
+++ b/_pages/people.html
@@ -10,14 +10,15 @@ author_profile: true
 <h1>
   博士后
 </h1>
-  Rashid Khan  <br>
+  Inayatul Haq <br>
+  Rashid Khan （已出站） <br>
   苏李一磊 （已出站） <br>
   Haseeb Hassan （已出站）<br>
 <br>
 <br>
 <h1>
 研究生</h1>
-2024级： <br>
+2024级： 杨柳奕，覃宁欣，夏泽鸿，包绍琦，张奇，梁芷晴 <br>
 2023级： 郑浩然，龚政，肖力伟 <br>
 2022级： 陈超， 吴嘉怡 <br>
 X-Talent: 梁浩民 <br>
@@ -32,7 +33,7 @@ X-Talent: 梁浩民 <br>
 2020级研究生： 黄永志，肖楚达，闫岩，阮茹芸  <br>
 2019级研究生： 李丹，任昭宇   <br>
 联合培养博士生：周成民  <br>
-本科生：
+本科生：<br>
 <br>
 
 
