--- a/_pages/people.html
+++ b/_pages/people.html
@@ -18,7 +18,7 @@ author_profile: true
 <br>
 <h1>
 研究生</h1>
-2024级： 杨柳奕，覃宁欣，夏泽鸿，包绍琦，张奇，梁芷晴 <br>
+2024级： 杨柳奕，覃宁欣，夏泽鸿，包绍琦，张奇，梁芷晴，曾轲 <br>
 2023级： 郑浩然，龚政，肖力伟 <br>
 2022级： 陈超， 吴嘉怡 <br>
 X-Talent: 梁浩民 <br>
