--- a/_pages/introduction.html
+++ b/_pages/introduction.html
@@ -13,10 +13,13 @@ author_profile: true
 {% endfor %}
 
 <br>
-欢迎来到深圳技术大学-大数据与互联网学院-医学人工智能实验室！
+欢迎来到深圳技术大学-大数据与互联网学院-大数据关键技术与应用实验室/惟鼎医学人工智能实验室！
 <br>
 <br>
 <h1> 研究领域</h1>
 <br>
 
-大模型微调技术、医学大模型、人工智能、深度学习、医疗影像学、大数据技术与应用、生物信息学、精准医学、手术机器人、AI制药等
+大模型微调技术、医学大模型、智能手术机器人，人工智能、深度学习、医疗影像学、大数据技术与应用、生物信息学、癌症早筛、精准医学、AI制药等
+<br>
+<br>
+We  are hiring postdocs in medical AI, please send me an email (huangbingding@sztu.edu.cn) if you are interested.
