--- a/_pages/introduction.html
+++ b/_pages/introduction.html
@@ -22,4 +22,6 @@ author_profile: true
 大模型微调技术、医学大模型、智能手术机器人，人工智能、深度学习、医疗影像学、大数据技术与应用、生物信息学、癌症早筛、精准医学、AI制药等
 <br>
 <br>
-We  are hiring postdocs in medical AI, please send me an email (huangbingding@sztu.edu.cn) if you are interested.
+招收博士后和交流博士生
+<br>
+We  are hiring postdocs or joinrt PhD students in medical AI and LLM, please send me an email (huangbingding@sztu.edu.cn) if you are interested.
