--- a/_pages/introduction.html
+++ b/_pages/introduction.html
@@ -24,4 +24,4 @@ author_profile: true
 <br>
 招收博士后和交流博士生
 <br>
-We  are hiring postdocs or joinrt PhD students in medical AI and LLM, please send me an email (huangbingding@sztu.edu.cn) if you are interested.
+We  are hiring postdocs or joint PhD students in medical AI and LLM, please send me an email (huangbingding@sztu.edu.cn) if you are interested.
