--- a/_pages/introduction.html
+++ b/_pages/introduction.html
@@ -13,7 +13,7 @@ author_profile: true
 {% endfor %}
 
 <br>
-欢迎来到深圳技术大学-大数据与互联网学院-大数据关键技术与应用实验室/惟鼎医学人工智能实验室！
+欢迎来到深圳技术大学-人工智能学院-大数据关键技术与应用实验室/惟鼎医学人工智能实验室！
 <br>
 <br>
 <h1> 研究领域</h1>
