--- a/_pages/people.html
+++ b/_pages/people.html
@@ -20,9 +20,9 @@ author_profile: true
 <br>
 <h1>
 研究生</h1>
+2025级：叶子豪
 2024级： 杨柳奕，覃宁欣，夏泽鸿，包绍琦，张奇，梁芷晴，曾轲 <br>
 2023级： 郑浩然，龚政，肖力伟 <br>
-2022级： 陈超， 吴嘉怡 <br>
 X-Talent: 梁浩民 <br>
 
 <br>
@@ -31,6 +31,7 @@ X-Talent: 梁浩民 <br>
 <br><br>
 <h1>
 毕业的学生</h1>
+2022级： 陈超， 吴嘉怡 <br>
 2021级研究生： 潘元科，李昊玉，戴佳鹏，朱金鑫，张瀚文，左旭民  <br>
 2020级研究生： 黄永志，肖楚达，闫岩，阮茹芸  <br>
 2019级研究生： 李丹，任昭宇   <br>
