--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,11 +7,17 @@ author_profile: true
 
 {% include base_path %}
 
+<h1>2025-2026 第一学期</h1> 
+人工智能导论
+<br>
+
+<h1>2024-2025 第二学期</h1> 
+人工智能引论与DeepSeek 应用 （全校通识课）
+<br>
 
 <h1>2024-2025 第一学期</h1> 
 人工智能导论
 <br>
-<h1>2024-2025 第二学期</h1> 
-人工智能引论与DeepSeek 应用 （全校通识课）
+
 
 
